--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "css-loader": "^6.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
