--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^7.0.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.4.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
