--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.0",
+    "react-refresh": "^0.11.0",
     "sass": "^1.44.0",
     "sass-loader": "^12.4.0",
     "webpack": "^5.65.0",
